Fix gap

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ ul {
   display: flex;
   justify-content: start;
   align-items: center;
+  gap: 1rem;
 }
 
 .lower-header-buttons {
